--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "nuxt": "3.16.2"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.1",
     "@mdi/font": "7.4.47",
     "@nuxt/vite-builder": "3.16.2",
+    "@pinia/nuxt": "^0.11.0",
     "apexcharts": "4.5.0",
-    "@iconify/vue": "^4.1.1",
+    "pinia": "^3.0.2",
     "sass": "1.70.0",
     "vue": "3.5.13",
     "vue-tabler-icons": "2.21.0",
