--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.16.2"
+    "autoprefixer": "^10.4.21",
+    "nuxt": "3.16.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5"
   },
   "dependencies": {
     "@iconify/vue": "^4.1.1",
     "@mdi/font": "7.4.47",
     "@nuxt/vite-builder": "3.16.2",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.11.0",
+    "@tailwindcss/vite": "^4.1.5",
     "@vueuse/core": "^13.1.0",
     "apexcharts": "4.5.0",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "sass": "1.70.0",
     "vue": "3.5.13",
     "vue-tabler-icons": "2.21.0",
