--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "packageManager": "yarn@1.22.22",
+  "license": "MIT",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,29 +13,30 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.18",
+    "@types/lodash": "^4.17.19",
     "autoprefixer": "^10.4.21",
-    "nuxt": "3.16.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5"
+    "nuxt": "3.17.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   },
   "dependencies": {
-    "@iconify/vue": "^4.1.1",
+    "@iconify/vue": "^5.0.0",
     "@mdi/font": "7.4.47",
-    "@nuxt/vite-builder": "3.16.2",
+    "@nuxt/vite-builder": "3.17.5",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-    "@pinia/nuxt": "^0.11.0",
-    "@tailwindcss/vite": "^4.1.5",
-    "@vueuse/core": "^13.1.0",
-    "apexcharts": "4.5.0",
-    "pinia": "^3.0.2",
-    "pinia-plugin-persistedstate": "^4.2.0",
-    "sass": "1.70.0",
-    "vue": "3.5.13",
+    "@pinia/nuxt": "^0.11.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.4.0",
+    "apexcharts": "4.7.0",
+    "chart.js": "^4.5.0",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.0",
+    "sass": "1.89.2",
+    "vue": "3.5.17",
     "vue-tabler-icons": "2.21.0",
-    "vue3-apexcharts": "1.5.2",
-    "vue3-perfect-scrollbar": "1.6.1",
-    "vuetify": "3.7.18",
+    "vue3-apexcharts": "1.8.0",
+    "vue3-perfect-scrollbar": "2.0.0",
+    "vuetify": "3.8.11",
     "vuetify-nuxt-module": "^0.18.7"
   },
   "overrides": {
